Fixed container and spacing issues for migration

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -2,30 +2,35 @@
 // Migration Styles
 // -----------------------------
 
+
 #migrated-site {
 
-  // Stylseheet overrides
+
+
+
+  // Stylesheet overrides
   // -----------------------------
 
+
+  .widget.feature {
+    z-index: 2;
+  }
+
+
   // Template wrapper (replace with corresponding template classes)
-  .container.wrapper {
-    width: 100%;
-    max-width: 100%;
-    margin: 0;
-  }
-
   .container[role="main"] {
-    padding: 65px 0 65px 0;
-
-    @media @tablet {
-      padding: 65px 30px 65px 30px;
-      margin: 0 auto;
-    }
+    margin: 0;
+    max-width: 100%;
+    padding: 0;
+    width: 100%;
   }
 
-  // Main content spacing (replace with corresponding template class)
-  .main {
-    padding: 0;
+  .row {
+    margin-left: 0;
+  }
+
+  div[role="main"] [data-name="row"] {
+    margin-bottom: 0;
   }
 
   // Widget overflow to allow 10S overlays to display correctly
@@ -33,16 +38,16 @@
     overflow: inherit;
   }
 
+
+
+
   // Migration styles
   // -----------------------------
 
+
   // Replace with corresponding template values
   @container-width: 1200px;
-
-  @spacing__first--desktop: 0px;
-  @spacing__first--tablet:  0px;
-  @spacing__first--mobile:  0px;
-
+  @spacing__first--desktop: 65px;
   @spacing--other: 30px;
 
 
@@ -67,27 +72,13 @@
   // Move spacing to first widget in the main zone (not sections)
   &.edit #page-zones__main-overlay + .widget:not(.row),
   #page-zones__main > .widget:not(.row):first-child {
-    margin-top: @spacing__first--desktop;
-
-    @media @tablet {
-      margin-top: @spacing__first--tablet;
-    }
-    @media @mobile {
-      margin-top: @spacing__first--mobile;
-    }
+    padding-top: @spacing__first--desktop;
   }
 
 
   // Move spacing to last widget in the main zone (not sections)
   #page-zones__main > .widget:not(.row):last-child {
-    margin-bottom: @spacing__first--desktop;
-
-    @media @tablet {
-      margin-bottom: @spacing__first--tablet;
-    }
-    @media @mobile {
-      margin-bottom: @spacing__first--mobile;
-    }
+    padding-bottom: @spacing__first--desktop;
   }
 
 
@@ -105,16 +96,11 @@
 
   // Adds spacing to the section when a widget is before it
   #page-zones__main > .widget:not(.row) + .row {
-    margin-bottom: @spacing--other;
     margin-top: @spacing--other;
 
-    &:not(:last-child) {
+    &:last-child {
          margin-bottom: 0;
     }
-  }
-
-  .row {
-    margin-left: 0;
   }
 
 } // End of #migrated-site
